plugins {
    id 'java'
    id 'java-library'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group 'app.beautyminder'
version '1.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

bootJar {
    mainClass = 'app.beautyminder.BeautyMinderApplication'
    archiveFileName = "beautyminder-${version}.${archiveExtension.get()}"
}
//dependencyManagement {
//    imports {
//        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.4'
//    }
//}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'

    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.jetbrains:annotations:24.0.0'
    implementation 'io.github.flashvayne:chatgpt-spring-boot-starter:1.0.4'

    // AWS
    implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
    implementation 'org.opensearch.client:spring-data-opensearch:1.2.0'
    implementation 'org.opensearch.client:opensearch-java:2.6.0'
    implementation 'org.opensearch.client:opensearch-rest-client-sniffer:2.6.0'

    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
//    testRuntimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

test {
    useJUnitPlatform()
}
